<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".views.Login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_description"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_account" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:theme="@style/MaterialTextLayout"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40sp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress|textNoSuggestions"
                android:textSize="15sp"
                android:typeface="monospace" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:theme="@style/MaterialTextLayout"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20sp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="15sp"
                android:typeface="monospace" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@color/colorPrimary"
            android:text="@string/login_btn"
            android:textColor="@color/login_btn_txt"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

</RelativeLayout>
